--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=8028758334:##
-GEMINI_API_KEY=AIzaS##
+TELEGRAM_BOT_TOKEN=8028758334:AAGCn1B7N-zKmM4v92nKKB2LqctCGYNoQTs
+GEMINI_API_KEY=AIzaSyDpZ0v3ABosPnlCYepW5VWfNqgqi974vnA
