Label Extraction | Only with PDF Chunk & Image

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=8028758334:AAGCn1B7N-zKmM4v92nKKB2LqctCGYNoQTs
-GEMINI_API_KEY=AIzaSyDpZ0v3ABosPnlCYepW5VWfNqgqi974vnA
+TELEGRAM_BOT_TOKEN=232
+GEMINI_API_KEY=231
