--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "request": "^2.88.2"
   }
 }
